--- a/style.css
+++ b/style.css
@@ -8,3 +8,19 @@
     padding: 20px;
     border-radius: 5px;
 }
+
+button{
+    height: 45px;
+    width: 350px;  
+}
+#content{
+    width: 100%;
+    height: 400Px;
+}
+
+
+@media screen and (max-width: 1640px){
+
+    
+}
+@media screen and (max-width: 1640px){}
